--- a/app.json
+++ b/app.json
@@ -28,7 +28,12 @@
       "expo-router",
       [
         "expo-splash-screen",
-        {}
+        {
+          "image": "./assets/images/splash-icon.png",
+          "imageWidth": 200,
+          "resizeMode": "contain",
+          "backgroundColor": "#ffffff"
+        }
       ]
     ],
     "experiments": {
